force-app/main/default/objects/OrderLineZapItem__c/OrderLineZapItem__c.object-meta.xml
<CustomObject>
    <label>Order Line Zap Item</label>
    <nameField>
        <displayFormat>OLZI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Zap Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>