force-app/main/default/objects/OrderLineZapItem__c/fields/OppCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OppCloseDate__c</fullName>
    <label>OppCloseDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>