force-app/main/default/objects/OrderLineZapItem__c/fields/OpportunityNo__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNo__c</fullName>
    <label>OpportunityNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>