force-app/main/default/objects/OrderLineZapItem__c/fields/OppOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerName__c</fullName>
    <label>OppOwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>