force-app/main/default/objects/OrderLineZapItem__c/fields/OppProjectManager__c.field-meta.xml
<CustomField>
    <fullName>OppProjectManager__c</fullName>
    <label>OppProjectManager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>