force-app/main/default/objects/OrderLineZapItem__c/fields/OppRealizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>OppRealizationEndDate__c</fullName>
    <label>OppRealizationEndDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>