force-app/main/default/objects/OrderLineZapItem__c/fields/OppRealizationStartDate__c.field-meta.xml
<CustomField>
    <fullName>OppRealizationStartDate__c</fullName>
    <label>OppRealizationStartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>