force-app/main/default/objects/OrderLineZapItem__c/fields/OrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>OrderLineItem__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>OrderLineItem__c</referenceTo>
    <relationshipLabel>Order Line Zap Items</relationshipLabel>
    <relationshipName>OrderLineZapItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>