force-app/main/default/objects/OrderLineZapItem__c/fields/QLI_PS1__c.field-meta.xml
<CustomField>
    <fullName>QLI_PS1__c</fullName>
    <label>QLI_PS1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>