force-app/main/default/objects/OrderLineZapItem__c/fields/QLI_PS2__c.field-meta.xml
<CustomField>
    <fullName>QLI_PS2__c</fullName>
    <label>QLI_PS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>