force-app/main/default/objects/OrderLineZapItem__c/fields/QLI_PS3__c.field-meta.xml
<CustomField>
    <fullName>QLI_PS3__c</fullName>
    <label>QLI_PS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>