force-app/main/default/objects/OrderLineZapItem__c/fields/QliBussinesName__c.field-meta.xml
<CustomField>
    <fullName>QliBussinesName__c</fullName>
    <label>QliBussinesName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>