force-app/main/default/objects/OrderLineZapItem__c/fields/QliDescription__c.field-meta.xml
<CustomField>
    <fullName>QliDescription__c</fullName>
    <label>QliDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>