force-app/main/default/objects/OrderLineZapItem__c/fields/QliTCAccommodationCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCAccommodationCost__c</fullName>
    <label>QliTCAccommodationCost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>