force-app/main/default/objects/OrderLineZapItem__c/fields/QliTCAssemblyCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCAssemblyCost__c</fullName>
    <label>QliTCAssemblyCost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>