force-app/main/default/objects/OrderLineZapItem__c/fields/QliTCMaterialShippingCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCMaterialShippingCost__c</fullName>
    <label>QliTCMaterialShippingCost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>