force-app/main/default/objects/OrderLineZapItem__c/fields/QliTcShipping__c.field-meta.xml
<CustomField>
    <fullName>QliTcShipping__c</fullName>
    <label>QliTcShipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>