force-app/main/default/objects/OrderLineZapItem__c/fields/QliTCShippingCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCShippingCost__c</fullName>
    <label>QliTCShippingCost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>